# git_exam

./: README.md  ai_review.py  github_analyzer.py  main.py  pyproject.toml  scorer.py  visualizer.py
templates/: index.html
