[project]
name = "git-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
